SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/SFDC_Data_Service_Object__c.object-meta.xml
<CustomObject>
    <label>SFDC Data Service Object</label>
    <nameField>
        <displayFormat>SFO-{0000}</displayFormat>
        <label>SFDC Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Data Service Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>