SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/fields/Migration_Title__c.field-meta.xml
<CustomField>
    <fullName>Migration_Title__c</fullName>
    <formula>SFDC_Data_Service_Source__r.Migration_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migration Title</label>
    <type>Text</type>
</CustomField>