SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/fields/Plural_Label__c.field-meta.xml
<CustomField>
    <fullName>Plural_Label__c</fullName>
    <label>Plural Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>