SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/fields/SFDC_Data_Service_Source__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Data_Service_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Data Service Source</label>
    <referenceTo>SFDC_Data_Service_Source__c</referenceTo>
    <relationshipLabel>SFDC Data Service Objects</relationshipLabel>
    <relationshipName>SFDC_Data_Service_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>