SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/fields/Singular_Label__c.field-meta.xml
<CustomField>
    <fullName>Singular_Label__c</fullName>
    <label>Singular Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>