SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/fields/Source_Database__c.field-meta.xml
<CustomField>
    <fullName>Source_Database__c</fullName>
    <formula>SFDC_Data_Service_Source__r.Source_Database__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Database</label>
    <type>Text</type>
</CustomField>