SFDCDataService/main/default/objects/SFDC_Data_Service_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Database__c</columns>
    <columns>Source_Schema__c</columns>
    <columns>Singular_Label__c</columns>
    <columns>Plural_Label__c</columns>
    <columns>SFO_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>